hhs_oauth_server/examples/devops/cloudformation/in_dev/modified-orig-prod-applicationspecific.json
{
    "AWSTemplateFormatVersion":"2010-09-09",
    "Description":"AWS CloudFormation Template for SaaS Specific Changes to VPC",
    "Parameters": {
        "VPCCIDR" : {
            "Description" : "VPC ID",
            "Type": "String"
        },
        "VPC" : {
            "Description" : "VPC ID",
            "Type": "String"
        },
        "EnvironmentName0": {
            "Description": "Set Short Environment Name",
            "Type": "String"
        },
        "EnvironmentName1": {
            "Description": "Set Long Environment Name",
            "Type": "String"
        },
        "ProjectName": {
            "Description": "Set Project Name",
            "Type" : "String"
        },
        "subnet1": {
            "Description": "Set Subnet 1",
            "Type" : "String"
        },
        "subnet2": {
            "Description": "Set Subnet 2",
            "Type" : "String"
        },
        "subnet3": {
            "Description": "Set Subnet 3",
            "Type" : "String"
        },
        "subnet4": {
            "Description": "Set Subnet 4",
            "Type" : "String"
        },
        "subnet5": {
            "Description": "Set Subnet 5",
            "Type" : "String"
        },
        "subnet6": {
            "Description": "Set Subnet 6",
            "Type" : "String"
        },
        "subnet7": {
            "Description": "Set Subnet 7",
            "Type" : "String"
        },
        "subnet8": {
            "Description": "Set Subnet 8",
            "Type" : "String"
        },
        "subnet9": {
            "Description": "Set Subnet 9",
            "Type" : "String"
        },
        "subnet10": {
            "Description": "Set Subnet 10",
            "Type" : "String"
        },
        "subnet11": {
            "Description": "Set Subnet 11",
            "Type" : "String"
        },
        "subnet12": {
            "Description": "Set Subnet 12",
            "Type" : "String"
        },
        "subnet13": {
            "Description": "Set Subnet 13",
            "Type" : "String"
        },
        "subnet14": {
            "Description": "Set Subnet 14",
            "Type" : "String"
        },
        "subnet15": {
            "Description": "Set Subnet 15",
            "Type" : "String"
        },
        "subnet16": {
            "Description": "Set Subnet 16",
            "Type" : "String"
        },
        "cidr1": {
            "Description": "Set Subnet 1",
            "Type" : "String"
        },
        "cidr2": {
            "Description": "Set Subnet 2",
            "Type" : "String"
        },
        "cidr3": {
            "Description": "Set Subnet 3",
            "Type" : "String"
        },
        "cidr4": {
            "Description": "Set Subnet 4",
            "Type" : "String"
        },
        "cidr5": {
            "Description": "Set Subnet 5",
            "Type" : "String"
        },
        "cidr6": {
            "Description": "Set Subnet 6",
            "Type" : "String"
        },
        "cidr7": {
            "Description": "Set Subnet 7",
            "Type" : "String"
        },
        "cidr8": {
            "Description": "Set Subnet 8",
            "Type" : "String"
        },
        "cidr9": {
            "Description": "Set Subnet 9",
            "Type" : "String"
        },
        "cidr10": {
            "Description": "Set Subnet 10",
            "Type" : "String"
        },
        "cidr11": {
            "Description": "Set Subnet 11",
            "Type" : "String"
        },
        "cidr12": {
            "Description": "Set Subnet 12",
            "Type" : "String"
        },
        "cidr13": {
            "Description": "Set Subnet 13",
            "Type" : "String"
        },
        "cidr14": {
            "Description": "Set Subnet 14",
            "Type" : "String"
        },
        "cidr15": {
            "Description": "Set Subnet 15",
            "Type" : "String"
        },
        "cidr16": {
            "Description": "Set Subnet 16",
            "Type" : "String"
        },
        "RouteTablePublic": {
            "Description": "Set Subnet 13",
            "Type" : "String"
        },
        "RouteTableaz1": {
            "Description": "Set Subnet 14",
            "Type" : "String"
        },
        "RouteTableaz2": {
            "Description": "Set Subnet 15",
            "Type" : "String"
        },
        "RouteTableaz3": {
            "Description": "Set Subnet 16",
            "Type" : "String"
        },
        "acl1": {
            "Description": "Set acl 1",
            "Type" : "String"
        },
        "acl2": {
            "Description": "Set acl 2",
            "Type" : "String"
        },
        "acl3": {
            "Description": "Set acl 3",
            "Type" : "String"
        },
        "dataSG": {
            "Description": "Set Security Group",
            "Type" : "String"
        },
        "appSG": {
            "Description": "Set Security Group",
            "Type" : "String"
        },
        "webSG": {
            "Description": "Set Security Group",
            "Type" : "String"
        },
        "jumpboxSG": {
            "Description": "Set Security Group",
            "Type" : "String"
        },
		"vpnSG": {
            "Description": "Set Security Group",
            "Type" : "String"
        }
    },
    "Resources":{ 
		"EC2S3Role" : {
          "Type" : "AWS::IAM::Role",
          "Properties": {
            "AssumeRolePolicyDocument": {
               "Version" : "2012-10-17",
               "Statement": [ {
                  "Effect": "Allow",
                  "Principal": {
                     "Service": [ "ec2.amazonaws.com" ]
                  },
                  "Action": [ "sts:AssumeRole" ]
               } ]
            },
            "Path": "/",
			"Policies": [ {
             "PolicyName": "S3Policy",
             "PolicyDocument" : {
						"Statement": [
						{
							"Effect": "Allow",
							"Action": "s3:*",
							"Resource": "*"
						}
					]
				}
			} ]
		  }
		},
		"EC2S3RoleProfile": {
         "Type": "AWS::IAM::InstanceProfile",
         "Properties": {
            "Path": "/",
            "Roles": [ { "Ref": "EC2S3Role" } ]
         }
		},
		"DevS3Bucket": {
		  "DeletionPolicy" : "Retain",
		  "Type": "AWS::S3::Bucket",
		  "Properties": {
				   "BucketName" : "cma-prod-upload"
		  }
		},
    "pmdaprodappsg":{
            "Type":"AWS::EC2::SecurityGroup",
			"DeletionPolicy" : "Retain",
            "Properties":{
                "GroupDescription":{"Fn::Join" : [ " ",[{"Ref":"ProjectName"},{"Ref" : "EnvironmentName1"},"app","sg"] ] },
                "VpcId":{
                    "Ref":"VPC"
                },
                "SecurityGroupIngress":[
					{ "IpProtocol":"-1","SourceSecurityGroupId":{"Ref":"appSG"} },
					{ "IpProtocol":"tcp","FromPort":"3310","ToPort":"3311","SourceSecurityGroupId":{ "Ref":"dataSG"} },
					{ "IpProtocol":"tcp","FromPort":"80","ToPort":"80","SourceSecurityGroupId":{ "Ref":"webSG"} },
					{ "IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"xx.xx.xx.xx/20" }
                ],
                "SecurityGroupEgress":[
                    { "IpProtocol":"-1","CidrIp":"0.0.0.0/0" }
                ],
                "Tags":[
                    {
                        "Key":"Description",
                        "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"app","sg"] ] }
                    },
                    {
                        "Key":"Name",
                        "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"app","sg"] ] }
                    },
                    {
                        "Key":"Environment",
                        "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                    },
                    {
                        "Key":"Type",
                        "Value":"Private"
                    },
                    {
                        "Key":"Project",
                        "Value":{"Ref":"ProjectName"}
                    }
                ]
            }
        },
		"pmdaproddatsg":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{"Fn::Join" : [ " ",[{"Ref":"ProjectName"},{"Ref" : "EnvironmentName1"},"dat","sg"] ] },
                "VpcId":{
                    "Ref":"VPC"
                },
                "SecurityGroupIngress":[
					{ "IpProtocol":"-1","SourceSecurityGroupId":{"Ref":"dataSG"} },
					{ "IpProtocol":"tcp","FromPort":"1530","ToPort":"1530","SourceSecurityGroupId":{"Ref":"appSG"} },
					{ "IpProtocol":"tcp","FromPort":"3310","ToPort":"3311","CidrIp":"xx.xx.xx.xx/20" },
					{ "IpProtocol":"tcp","FromPort":"3310","ToPort":"3311","CidrIp":"xx.xx.xx.xx/20" }
                ],
                "SecurityGroupEgress":[
                    { "IpProtocol":"-1","CidrIp":"0.0.0.0/0" }
                ],
                "Tags":[
                    {
                        "Key":"Description",
                        "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"dat","sg"] ] }
                    },
                    {
                        "Key":"Name",
                        "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"dat","sg"] ] }
                    },
                    {
                        "Key":"Environment",
                        "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                    },
                    {
                        "Key":"Type",
                        "Value":"Private"
                    },
                    {
                        "Key":"Project",
                        "Value":{"Ref":"ProjectName"}
                    }
                ]
            }
        },
		"pmdaprodwebsg":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{"Fn::Join" : [ " ",[{"Ref":"ProjectName"},{"Ref" : "EnvironmentName1"},"web","sg"] ] },
                "VpcId":{
                    "Ref":"VPC"
                },
                "SecurityGroupIngress":[
					{ "IpProtocol":"-1","SourceSecurityGroupId":{"Ref":"webSG"} },
					{ "IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"xx.xx.xx.xx/32" },
					{ "IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":"xx.xx.xx.xx/16" },
					{ "IpProtocol":"tcp","FromPort":"443","ToPort":"443","CidrIp":"xx.xx.xx.xx/16" },
					{ "IpProtocol":"tcp","FromPort":"80","ToPort":"80","SourceSecurityGroupId":{ "Ref": "pmdaprodwebelbsg"} },
					{ "IpProtocol":"tcp","FromPort":"443","ToPort":"443","SourceSecurityGroupId":{ "Ref": "pmdaprodwebelbsg"} }
                ],
                "SecurityGroupEgress":[
                    { "IpProtocol":"-1","CidrIp":"0.0.0.0/0" }
                ],
                "Tags":[
                    {
                        "Key":"Description",
                        "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"web","sg"] ] }
                    },
                    {
                        "Key":"Name",
                        "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"web","sg"] ] }
                    },
                    {
                        "Key":"Environment",
                        "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                    },
                    {
                        "Key":"Type",
                        "Value":"Private"
                    },
                    {
                        "Key":"Project",
                        "Value":{"Ref":"ProjectName"}
                    }
                ]
            }
        },
		"pmdaprodwebelbsg":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{"Fn::Join" : [ " ",[{"Ref":"ProjectName"},{"Ref" : "EnvironmentName1"},"web","elb","sg"] ] },
                "VpcId":{
                    "Ref":"VPC"
                },
                "SecurityGroupIngress":[
                	{ "IpProtocol":"tcp","FromPort":"80","ToPort":"80","CidrIp":{ "Ref": "VPCCIDR"} },
					{ "IpProtocol":"tcp","FromPort":"443","ToPort":"443","CidrIp":{ "Ref": "VPCCIDR"} },
					{ "IpProtocol":"tcp","FromPort":"443","ToPort":"443","CidrIp":"xx.xx.xx.xx/32" },
					{ "IpProtocol":"tcp","FromPort":"443","ToPort":"443","CidrIp":"xx.xx.xx.xx/32" },
					{ "IpProtocol":"tcp","FromPort":"443","ToPort":"443","CidrIp":"xx.xx.xx.xx/32" },
					{ "IpProtocol":"tcp","FromPort":"443","ToPort":"443","CidrIp":"xx.xx.xx.xx/32" }	
					],
                "SecurityGroupEgress":[
                    { "IpProtocol":"-1","CidrIp":"0.0.0.0/0" }
                ],
                "Tags":[
                    {
                        "Key":"Description",
                        "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"web","elb","sg"] ] }
                    },
                    {
                        "Key":"Name",
                        "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"web","elb","sg"] ] }
                    },
                    {
                        "Key":"Environment",
                        "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                    },
                    {
                        "Key":"Type",
                        "Value":"Private"
                    },
                    {
                        "Key":"Project",
                        "Value":{"Ref":"ProjectName"}
                    }
                ]
            }
        },		
        "pmdaprodasapp01":{
            "Type":"AWS::EC2::Instance",
            "Properties":{
            "Tags":[
                   {
                       "Key":"Name",
                       "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"asapp01"] ] }
                   },
                   {
                       "Key":"Description",
                       "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"asapp01","server"] ] }
                   },
                   {
                       "Key":"Environment",
                       "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                   },
                   {
                       "Key":"Type",
                       "Value":"Private"
                   },
                   {
                       "Key":"Project",
                       "Value": {"Ref":"ProjectName"}
                   }
               ],
               "KeyName": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},"prod"] ] },
			   "IamInstanceProfile" : { "Ref" : "EC2S3RoleProfile" },
               "InstanceType":"m3.large",
               "SubnetId": {"Ref": "subnet5" },
			   "Monitoring" : true,
               "Tenancy":"dedicated",
               "ImageId":"ami-2b788c40",
               "EbsOptimized" : false,
			   "SourceDestCheck" : true,
			   "SecurityGroupIds" : [{"Ref":"appSG"}, {"Ref":"pmdaprodappsg"}],
               "BlockDeviceMappings" : [
                    {
                        "DeviceName" : "/dev/sda1",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : true,
                            "VolumeSize" : "100"
                        }},
					{
                        "DeviceName" : "/dev/sdb",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : false,
                            "VolumeSize" : "100"
                        }}
				],
               "UserData" : { "Fn::Base64" : { "Fn::Join" : [ "", [
                    "#!/bin/bash\n",
                    "yum update -y", "\n",
					"mkdir /app", "\n",
					"mkfs -t ext4 /dev/xvdb", "\n",
					"echo /dev/xvdb /app ext4 defaults 0 2 >> /etc/fstab", "\n",
					"mount /app", "\n"
               ]]}}
            }
        },
		"pmdaprodasweb01":{
            "Type":"AWS::EC2::Instance",
            "Properties":{
            "Tags":[
                   {
                       "Key":"Name",
                       "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"asweb01"] ] }
                   },
                   {
                       "Key":"Description",
                       "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"asweb01","server"] ] }
                   },
                   {
                       "Key":"Environment",
                       "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                   },
                   {
                       "Key":"Type",
                       "Value":"Private"
                   },
                   {
                       "Key":"Project",
                       "Value": {"Ref":"ProjectName"}
                   }
               ],
               "KeyName": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},"prod"] ] },
			   "IamInstanceProfile" : { "Ref" : "EC2S3RoleProfile" },
               "InstanceType":"m3.large",
               "SubnetId": {"Ref": "subnet1" },
			   "Monitoring" : true,
               "Tenancy":"dedicated",
               "ImageId":"ami-2b788c40",
               "EbsOptimized" : false,
			   "SourceDestCheck" : true,
			   "SecurityGroupIds" : [{"Ref":"webSG"}, {"Ref":"pmdaprodwebsg"}],
               "BlockDeviceMappings" : [
                    {
                        "DeviceName" : "/dev/sda1",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : true,
                            "VolumeSize" : "100"
                        }},
					{
                        "DeviceName" : "/dev/sdb",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : false,
                            "VolumeSize" : "100",
							"Encrypted" : "true"
                        }}
				],
               "UserData" : { "Fn::Base64" : { "Fn::Join" : [ "", [
                    "#!/bin/bash\n",
                    "yum update -y", "\n",
					"mkdir /app", "\n",
					"mkfs -t ext4 /dev/xvdb", "\n",
					"echo /dev/xvdb /app ext4 defaults 0 2 >> /etc/fstab", "\n",
					"mount /app", "\n"
               ]]}}
            }
        },
		"pmdaprodmsapp02":{
            "Type":"AWS::EC2::Instance",
            "Properties":{
            "Tags":[
                   {
                       "Key":"Name",
                       "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"msapp02"] ] }
                   },
                   {
                       "Key":"Description",
                       "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"msapp02","server"] ] }
                   },
                   {
                       "Key":"Environment",
                       "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                   },
                   {
                       "Key":"Type",
                       "Value":"Private"
                   },
                   {
                       "Key":"Project",
                       "Value": {"Ref":"ProjectName"}
                   }
               ],
               "KeyName": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},"prod"] ] },
			   "IamInstanceProfile" : { "Ref" : "EC2S3RoleProfile" },
               "InstanceType":"m3.large",
               "SubnetId": {"Ref": "subnet5" },
			   "Monitoring" : true,
               "Tenancy":"dedicated",
               "ImageId":"ami-2b788c40",
               "EbsOptimized" : false,
			   "SourceDestCheck" : true,
			   "SecurityGroupIds" : [{"Ref":"appSG"}, {"Ref":"pmdaprodappsg"}],
               "BlockDeviceMappings" : [
                    {
                        "DeviceName" : "/dev/sda1",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : true,
                            "VolumeSize" : "100"
                        }},
					{
                        "DeviceName" : "/dev/sdb",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : false,
                            "VolumeSize" : "100"
                        }}
			   ],
               "UserData" : { "Fn::Base64" : { "Fn::Join" : [ "", [
                    "#!/bin/bash\n",
                    "yum update -y", "\n",
					"mkdir /app", "\n",
					"mkfs -t ext4 /dev/xvdb", "\n",
					"echo /dev/xvdb /app ext4 defaults 0 2 >> /etc/fstab", "\n",
					"mount /app", "\n"
               ]]}}
            }
        },
        "pmdaprodetapp03":{
            "Type":"AWS::EC2::Instance",
            "Properties":{
            "Tags":[
                   {
                       "Key":"Name",
                       "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"etapp03"] ] }
                   },
                   {
                       "Key":"Description",
                       "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"etapp03","server"] ] }
                   },
                   {
                       "Key":"Environment",
                       "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                   },
                   {
                       "Key":"Type",
                       "Value":"Private"
                   },
                   {
                       "Key":"Project",
                       "Value": {"Ref":"ProjectName"}
                   }
               ],
               "KeyName": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},"prod"] ] },
			   "IamInstanceProfile" : { "Ref" : "EC2S3RoleProfile" },
               "InstanceType":"m3.large",
               "SubnetId": {"Ref": "subnet5" },
			   "Monitoring" : true,
               "Tenancy":"dedicated",
               "ImageId":"ami-2b788c40",
               "EbsOptimized" : false,
			   "SourceDestCheck" : true,
			   "SecurityGroupIds" : [{"Ref":"appSG"}, {"Ref":"pmdaprodappsg"}],
               "BlockDeviceMappings" : [
                    {
                        "DeviceName" : "/dev/sda1",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : true,
                            "VolumeSize" : "100"
                        }},
					{
                        "DeviceName" : "/dev/sdb",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : false,
                            "VolumeSize" : "100"
                        }}
			   ],
               "UserData" : { "Fn::Base64" : { "Fn::Join" : [ "", [
                    "#!/bin/bash\n",
                    "yum update -y", "\n",
					"mkdir /app", "\n",
					"mkfs -t ext4 /dev/xvdb", "\n",
					"echo /dev/xvdb /app ext4 defaults 0 2 >> /etc/fstab", "\n",
					"mount /app", "\n"
               ]]}}
            }
        },
		"pmdaprodasdb01":{
            "Type":"AWS::EC2::Instance",
            "Properties":{
            "Tags":[
                   {
                       "Key":"Name",
                       "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"asdb01"] ] }
                   },
                   {
                       "Key":"Description",
                       "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"asdb01","server"] ] }
                   },
                   {
                       "Key":"Environment",
                       "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                   },
                   {
                       "Key":"Type",
                       "Value":"Private"
                   },
                   {
                       "Key":"Project",
                       "Value": {"Ref":"ProjectName"}
                   }
               ],
               "KeyName": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},"prod"] ] },
			   "IamInstanceProfile" : { "Ref" : "EC2S3RoleProfile" },
               "InstanceType":"m3.large",
               "SubnetId": {"Ref": "subnet7" },
			   "Monitoring" : true,
			   "PrivateIpAddress":"xx.xx.xx.xx",
               "Tenancy":"dedicated",
               "ImageId":"ami-2b788c40",
               "EbsOptimized" : false,
			   "SourceDestCheck" : true,
			   "SecurityGroupIds" : [{"Ref":"dataSG"}, {"Ref":"pmdaproddatsg"}],
               "BlockDeviceMappings" : [
                    {
                        "DeviceName" : "/dev/sda1",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : true,
                            "VolumeSize" : "100"
                        }},
					{
                        "DeviceName" : "/dev/sdb",
                        "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : false,
                            "VolumeSize" : "100",
							"Encrypted" : "true"
                        }}
				],
               "UserData" : { "Fn::Base64" : { "Fn::Join" : [ "", [
                    "#!/bin/bash\n",
                    "yum update -y", "\n",
					"mkdir /app", "\n",
					"mkfs -t ext4 /dev/xvdb", "\n",
					"echo /dev/xvdb /app ext4 defaults 0 2 >> /etc/fstab", "\n",
					"mount /app", "\n"
               ]]}}
            }
        },
		"pmdaprodwebelb": {
          "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
          "Properties": {
              "Tags":[
                  {
                      "Key":"Name",
                      "Value": {"Fn::Join" : [ "-",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"pmda","elb"] ] }
                  },
                  {
                      "Key":"Description",
                      "Value": {"Fn::Join" : [ " ",[ {"Ref":"ProjectName"},{"Ref" : "EnvironmentName0"},"pmda","elb"] ] }
                  },
                  {
                      "Key":"Environment",
                      "Value": {"Fn::Join" : [ " ",[{"Ref" : "EnvironmentName0"},""] ] }
                  },
                  {
                      "Key":"Type",
                      "Value":"Private"
                  },
                  {
                      "Key":"Project",
                      "Value":{"Ref":"ProjectName"}
                  }
              ],
              "Subnets" : [
                  { "Ref" : "subnet11" },
                  { "Ref" : "subnet12" }
              ],
              "HealthCheck": {
                  "Interval": "30",
                  "Target": "HTTP:80/",
                  "Timeout": "5",
                  "HealthyThreshold": "10",
                  "UnhealthyThreshold": "2"
              },
              "SecurityGroups": [
                  { "Ref": "pmdaprodwebelbsg" }
              ],
              "ConnectionSettings" : {
                  "IdleTimeout": "60"
              },
			  "Instances": [
				  { "Ref": "pmdaprodasapp01" }
              ],
              "Listeners": [
                { "InstancePort": "80", "LoadBalancerPort": "80", "Protocol": "http", "InstanceProtocol": "http" }
              ]
          }
      }
	}
}
